--- a/godot4/gd4tutorials/godot-4-c-main-screen-plugin/index.html
+++ b/godot4/gd4tutorials/godot-4-c-main-screen-plugin/index.html
@@ -348,6 +348,10 @@ var DarklupJs = {"primary_bg":"rgb(39,40,39)","secondary_bg":"rgb(36,37,37)","te
 
 		
 		
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/fAR_DssAig8?si=yMU5G1bcpAXjoDpG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
 <p>You may create a new project from scratch or use your Godot 4 existing project to follow along with this tutorial.</p>
 
 
